# patreon_dl

./: .gitignore  .patreon-dl-state.json  LICENSE.md  README.md  logo.af  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: BUILDING.md
src/patreon_dl/: __init__.py  browser.py  cli.py  cookie_validator.py  crawled_url.py  crawler.py  downloader.py  events.py  filename_retriever.py  http_client.py  models.py  path_sanitizer.py  processor.py  settings.py  subdir.py  target_info.py
tests/: test_processor.py  test_subdir.py
