[project]
name = "patreon-dl"
version = "0.1.0"
description = "Download content from patreon.com creator pages"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "benpm", email = "schwalegos@gmail.com" }
]
keywords = ["patreon", "downloader", "archiver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/benpm/patreon-dl"
Repository = "https://github.com/benpm/patreon-dl"
Issues = "https://github.com/benpm/patreon-dl/issues"

[project.scripts]
patreon-dl = "patreon_dl.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]
